--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -24,9 +24,10 @@
      -->
     <!-- allow local pages -->
     <access origin="http://127.0.0.1*"/> <!-- allow local pages -->
-    <access origin="http://192.168.0.52"/> 
-    <access origin="http://debug.phonegap.com" subdomains="true" />
+    <access origin="http://192.168.0.52"/>
+    <access origin="http://76.10.173.153"/> 
     <access origin="https://*.pushwoosh.com" subdomains="true" />
+    <access origin="http://*.devgetkickbak.com" subdomains="true" />
     <access origin="http://*.getkickbak.com" subdomains="true" />
     <access origin="https://*.facebook.com" subdomains="true" />
     <access origin="http://*.facebook.com" subdomains="true" />
@@ -46,13 +47,15 @@
 <plugins>
     <!--
     <plugin name="Temperature" value="org.apache.cordova.TempListener"/>
-    -->
-	<plugin name="NfcPlugin" value="com.chariotsolutions.nfc.plugin.NfcPlugin"/>
+   <plugin name="BumpPlugin" value="com.bump.plugin.BumpPlugin"/>
+   <plugin name="EbkPlugin" value="sdi.SSC.Ebk.EbkPlugin"/>
+    -->    
+   <plugin name="ProximityIDPlugin" value="com.getkickbak.plugin.ProximityIDPlugin"/>
 	<plugin name="Base64ToPNG" value="org.apache.cordova.Base64ToPNG"/>
 	<plugin name="WebIntent" value="com.borismus.webintent.WebIntent"/>
 	<plugin name="PushNotification" value="com.pushwoosh.test.plugin.pushnotifications.PushNotifications" onload="true"/>
     <plugin name="LowLatencyAudio" value="com.phonegap.PGLowLatencyAudio" />
-    <plugin name="org.apache.cordova.facebook.Connect" value="org.apache.cordova.facebook.ConnectPlugin"/>
+    <plugin name="FacebookConnect" value="org.apache.cordova.FacebookConnect"/>
     <plugin name="BarCodeScanner" value="com.phonegap.plugins.barcodescanner.BarcodeScanner"/>
     
     <plugin name="App" value="org.apache.cordova.App"/>
@@ -75,4 +78,3 @@
     <plugin name="Globalization" value="org.apache.cordova.Globalization" />
 </plugins>
 </cordova>
-
