--- a/res/menu/activity_kick_bak.xml
+++ b/res/menu/activity_kick_bak.xml
@@ -2,5 +2,9 @@
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+         />
 </menu>
+
+        <!-- 
+        android:showAsAction="never"
+         -->
