--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -24,18 +24,21 @@
      -->
     <!-- allow local pages -->
     <access origin="http://127.0.0.1*"/> <!-- allow local pages -->
-    <access origin="http://192.168.0.52*"/>
-    <access origin="http://192.168.0.46*"/> 
-    <access origin="http://76.10.173.153*"/> 
-    <access origin="https://*.pushwoosh.com" subdomains="true" />
-    <access origin="http://*.devgetkickbak.com" subdomains="true" />
-    <access origin="http://*.getkickbak.com" subdomains="true" />
-    <access origin="https://*.facebook.com" subdomains="true" />
-    <access origin="http://*.facebook.com" subdomains="true" />
-    <access origin="http://*.fbcdn.net" subdomains="true" />
-    <access origin="http://*.akamaihd.net" subdomains="true" />
-    <access origin="http://*.googleapis.com" subdomains="true" />
-
+    <access origin="http://192.168.0.52"/>
+    <access origin="http://192.168.0.46"/>
+    <access origin="http://76.10.173.153"/> 
+    <access origin="http://dev1getkickbak.com" subdomains="true" />
+    <access origin="http://devgetkickbak.com" subdomains="true" />
+    <access origin="http://getkickbak.com" subdomains="true" />
+    <access origin="http://googleapis.com" subdomains="true" />
+    <access origin="https://s3.amazonaws.com" />
+    <access origin="http://s3.amazonaws.com" />    
+    <access origin="https://pushwoosh.com" subdomains="true" />
+    <access origin="https://facebook.com" subdomains="true" />
+    <access origin="http://fbcdn.net" subdomains="true" />
+    <access origin="http://akamaihd.net" subdomains="true" />
+    <access origin="http://googleapis.com" subdomains="true" />
+    
     <!-- <access origin="https://example.com" /> allow any secure requests to example.com -->
     <!-- <access origin="https://example.com" subdomains="true" /> such as above, but including subdomains, such as www -->
     <!--
@@ -56,9 +59,9 @@
    <plugin name="NotificationPlugin" value="com.getkickbak.plugin.NotificationPlugin"/>
    <plugin name="Base64ToPNG" value="org.apache.cordova.Base64ToPNG"/>
 	<plugin name="WebIntent" value="com.borismus.webintent.WebIntent"/>
+	<plugin name="EmailComposer" value="org.apache.cordova.EmailComposer" />
 	<plugin name="PushNotification" value="com.pushwoosh.plugin.pushnotifications.PushNotifications" onload="true"/>
    <plugin name="LowLatencyAudio" value="com.phonegap.PGLowLatencyAudio" />
-   <plugin name="FacebookConnect" value="org.apache.cordova.FacebookConnect"/>
    <plugin name="BarCodeScanner" value="com.phonegap.plugins.barcodescanner.BarcodeScanner"/>
     
    <plugin name="App" value="org.apache.cordova.App"/>
